--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
+    "install": "^0.13.0",
+    "next": "14.0.4",
+    "npm": "^10.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
+    "react-bootstrap": "^2.9.1",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
