--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.3",
     "bootstrap": "^5.0.2",
+    "formik": "^2.4.5",
     "install": "^0.13.0",
     "next": "14.0.4",
     "npm": "^10.2.5",
@@ -17,7 +19,8 @@
     "react-bootstrap": "^2.9.1",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "eslint": "^8",
